--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "argon2": "^0.40.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
